Leak of id<MTLArgumentEncoder> in rx::(anonymous)::InitArgumentBufferEncoder() https://bugs.webkit.org/show_bug.cgi?id=244008 <rdar://98747531>

Reviewed by Kimmo Kinnunen and Dean Jackson.

* Source/ThirdParty/ANGLE/changes.diff: Update.
* Source/ThirdParty/ANGLE/src/libANGLE/renderer/metal/ProgramMtl.mm:
(rx::(anonymous)::InitArgumentBufferEncoder):
- Use mtl::adoptObjCObj() to fix the leak since
  -newArgumentEncoderWithBufferIndex: returns a +1 retained object.

Canonical link: https://commits.webkit.org/253525@main